# bindline

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test.yml  ci.yml  jekyll-gh-pages.yml  matrix.yml  pages.yml
docs/: Gemfile  _config.yml  index.md  installation.md  rationale.md  why.md
docs/bindline/: index.md  weak_refs.md
docs/bindline/extending/: index.md
docs/bindline/reference/: index.md
docs/bindline/reference/classes/: bindable_t.md  index.md
docs/bindline/reference/functions/: bind_back.md  bind_front.md  bind_refs_back.md  bind_refs_front.md  bind_suppress_validation.md  bind_tap.md  bind_winrt_context.md  drop_extra_back.md  drop_n_back.md  drop_winrt_event_args.md  index.md
docs/cppwinrt/: index.md
docs/cppwinrt/reference/: index.md
docs/cppwinrt/reference/concepts/: any_com_ptr.md  index.md  winrt_com_ptr.md  winrt_implementation.md  winrt_implements.md  winrt_interface.md  winrt_raw_pointer.md  winrt_strong_ref.md  winrt_type.md  winrt_weak_ref.md
docs/cppwinrt/reference/functions/: bind_context.md  index.md
docs/weak_refs/: index.md
docs/weak_refs/extending/: adl.md  extensions.md  index.md
docs/weak_refs/reference/: index.md
docs/weak_refs/reference/classes/: index.md  strong_ref_reseater.md
docs/weak_refs/reference/concepts/: convertible_to_weak_ref.md  index.md  strong_ref.md  weak_ref.md
docs/weak_refs/reference/functions/: bind_refs_back.md  bind_refs_front.md  index.md  lock_weak_ref.md  make_weak_ref.md
docs/weak_refs/reference/type_aliases/: index.md  strong_ref_t.md  weak_ref_t.md
include/: bind.hpp  weak_refs.hpp
include/FredEmmott/: bind.hpp  bindline.hpp  composable_bind.hpp  cppwinrt.hpp  weak_refs.hpp
include/FredEmmott/bind/: bind_back.hpp  bind_component_t.hpp  bind_front.hpp  bind_tap.hpp  bindable_t.hpp  config.hpp  cppwinrt.hpp  invocable_bindable_t.hpp  weak_refs.hpp
include/FredEmmott/bind/cppwinrt/: bind_winrt_context.hpp  discard_winrt_event_args.hpp
include/FredEmmott/bind/detail/: argument_binder_t.hpp  bindable_factory_t.hpp  binder_t.hpp  byval_binder_t.hpp  factory_concepts.hpp  invocable_bindable_t.hpp
include/FredEmmott/bind/weak_refs/: bind_refs_back.hpp  bind_refs_front.hpp
include/FredEmmott/bindline/: bind_back.hpp  bind_front.hpp  bind_suppress_validation.hpp  bind_tap.hpp  bindable_t.hpp  config.hpp  drop_extra_back.hpp  drop_n_back.hpp
include/FredEmmott/bindline/cppwinrt/: bind_winrt_context.hpp  drop_winrt_event_args.hpp
include/FredEmmott/bindline/detail/: bindable_factory_t.hpp  byval_binder_t.hpp  concat_pipeline.hpp  drop_back_bindable_t.hpp  drop_back_invocable.hpp  drop_back_invoke_t.hpp  drop_last_t.hpp  factory_concepts.hpp  invocable_bindable_t.hpp  is_valid_ordering.hpp  traced_bindline.hpp
include/FredEmmott/bindline/extension_api/: bindable_t.hpp  drop_back_bindable_t.hpp  ordering_requirements_t.hpp
include/FredEmmott/composable_bind/: bind_back.hpp  bind_front.hpp  bind_tap.hpp  bindable_t.hpp  config.hpp  drop_extra_back.hpp  drop_n_back.hpp
include/FredEmmott/cppwinrt/: bind_context.hpp  concepts.hpp  config.hpp
include/FredEmmott/weak_refs/: base.hpp  bind_maybe_refs_front.hpp  bind_refs_back.hpp  bind_refs_front.hpp  concepts.hpp  config.hpp  cppwinrt.hpp  extensions.hpp  lock_weak_ref.hpp  make_weak_ref.hpp  make_weak_refs.hpp  ref_types.hpp  std_shared_ptr.hpp  strong_ref_reseater.hpp  weak_from_this.hpp
include/bind/: bind_front.hpp  config.hpp  weak_refs.hpp
include/bind/cppwinrt/: bind_winrt_context.hpp  discard_winrt_event_args.hpp
include/bind/detail/: static_const.hpp
include/cppwinrt/: bind_context.hpp  concepts.hpp
include/weak_refs/: base.hpp  bind_maybe_refs_front.hpp  bind_refs_front.hpp  concepts.hpp  config.hpp  cppwinrt.hpp  extensions.hpp  lock_weak_ref.hpp  make_weak_ref.hpp  make_weak_refs.hpp  ref_types.hpp  std_shared_ptr.hpp  weak_from_this.hpp
include/weak_refs/cppwinrt/: get_weak.hpp
include/weak_refs/detail/: static_const.hpp
tests/: CMakeLists.txt  catch2_cppwinrt_main.cpp  stub_test.cpp
tests/bind/: bind_back.cpp  bind_front.cpp  bind_tap.cpp  direct invocation.cpp
tests/bind/cppwinrt/: bind_winrt_context.cpp
tests/bind/weak_refs/: bind_refs_back.cpp  bind_refs_front.cpp
tests/bindline/: bind_back.cpp  bind_front.cpp  bind_tap.cpp  detail-meta.cpp  direct invocation.cpp  drop_extra_back.cpp  drop_n_back.cpp  extension_api.cpp  ordering requirements.cpp  ordering_requirements.cpp
tests/bindline/cppwinrt/: bind_winrt_context.cpp  drop_winrt_event_args.cpp  ordering requirements.cpp
tests/bindline/weak_refs/: bind_refs_back.cpp  bind_refs_front.cpp
tests/cmake/: have-std-bind_back.cpp  skip-stub.cpp
tests/common/: impossible_class.hpp  test_invocable_three_args.hpp  test_invocable_two_args.hpp
tests/composable_bind/: bind_back.cpp  bind_front.cpp  bind_tap.cpp  direct invocation.cpp  drop_extra_back.cpp  drop_n_back.cpp
tests/composable_bind/cppwinrt/: bind_winrt_context.cpp  drop_winrt_event_args.cpp
tests/composable_bind/weak_refs/: bind_refs_back.cpp  bind_refs_front.cpp
tests/cppwinrt/: bind_context-DispatcherQueue.cpp  bind_context-wil.cpp  bind_context-winrt_resume_foreground.cpp  bind_context.cpp  concepts.cpp
tests/cppwinrt/bind_context/: DispatcherQueue without WIL.cpp  wil-resume_foreground.cpp  winrt-apartment_context.cpp  winrt-resume_foreground.cpp
tests/cppwinrt/bind_context/common/: always_suspends.hpp  check_forwards_arguments.hpp  test_dq_forwards_arguments.hpp  test_invocable_int_int.hpp  test_invoked_even_if_destroyed.hpp  test_switch_to_dispatcherqueue.hpp
tests/cppwinrt/common/: always_suspends.hpp  test_does_not_invoke_if_destroyed.hpp  test_dq_always_suspends.hpp
tests/weak_refs/: adl.cpp  bind_maybe_refs_front.cpp  bind_refs_back.cpp  bind_refs_front.cpp  concepts.cpp  raw pointers.cpp  std-enable_shared_from_this.cpp  std-shared_ptr.cpp  strong_ref_reseater.cpp
tests/weak_refs/common/: bind.hpp  bind_refs.hpp
tests/weak_refs/cppwinrt/: get_weak.cpp  winrt refs.cpp
(+41 files in other folders)
